--September 12, 2009--
- Loading a project now also attempts to load a preview in previewer

--August 29, 2009--
- Modified the newSavePoint() method to prevent a crash when the user want to store his first 
  SavePoint, but then it discard the "new SavePoint" dialog.

--August 22, 2009--
- Added titles to the previewer tool menus.

--August 14, 2009--
- Updated the TimeLine test class, now it shows a simple widget with the TimeLine and a button
  used to create new SavePoints.
- Removed useless header from timeline* sources.

--August 13, 2009--
- Commented the remaining headers under /savesystem, removed unused files and the /vng dir.

--August 12, 2009--
- Added to BranchDialog class a simple regexp validator, in order to avoid use of non-standard
  characters when the user types a new branch name.
- Starting writing apidox documentation, removin useless methods and fixing style.

--August 10, 2009--
- Fixed StartPage issue: opening/creating a project, when an other one is already open, now
  works.
- TimeLine didn't reload properly when changing from an existing project to an other. Fixed.

--August 9, 2009--
- Moved "New SavePoint" buttom from timeline to workflow dock widget. Changed workflow
  signals connection in order to restore the previous tab after setting a SavePoint.
- Added bool GitRunner::hasNewChangesToCommit(), so New SavePoint dialog is triggered only if
  there are uncommitted changes.
- Moved "On Section: <name>" button on the top of TimeLine dock for usability reason, because
  if there are lots of SavePoints, the user has to scroll down each time he want to perfom an
  action Section-related.
- Fixed plasma-containment-studiopreviewer.desktop file; now it doesn't interacts with 
  "Desktop Settings" -> "Desktop Activity" entries.
- Some fixes and coding style fix.

--August 3, 2009--
- When creating a new project, metadata.desktop file is filled with the required fields